httpbin-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: httpbin-deployment
  name: httpbin-deployment
  namespace: httpbin-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpbin-deployment
  template:
    metadata:
      labels:
        app: httpbin-deployment
    spec:
      containers:
      - image: kennethreitz/httpbin
        name: httpbin
        ports:
        - containerPort: 80
        resources: {}
