httpbin-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpbin-deployment
  name: httpbin-svc
  namespace: httpbin-test
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: httpbin-deployment
  type: ClusterIP
