httpbin-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: httpbin-ingress
  namespace: httpbin-test
spec:
  rules:
  - host: test.httpbin.io
    http:
      paths:
      - backend:
          service:
            name: httpbin-svc
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
